backoffice view fix

--- a/src/main/webapp/backoffice/order/list/views/item.ejs
+++ b/src/main/webapp/backoffice/order/list/views/item.ejs
@@ -1,4 +1,4 @@
 <h3>Order #<%= id %></h3>
 <p>By: <%= owner.firstName %> <%= owner.lastName %></p>
-<p>Total: <%= total %></p>
-<p>Item: <%= onlyItem.name %></p>
+<p>Total: <%= onlyItem.article.price %></p>
+<p>Item: <%= onlyItem.article.name %></p>
