back-office page designed

--- a/src/main/webapp/backoffice/order/list/views/item.ejs
+++ b/src/main/webapp/backoffice/order/list/views/item.ejs
@@ -1,4 +1,2 @@
-<h3>Order #<%= id %></h3>
-<p>By: <%= owner.firstName %> <%= owner.lastName %></p>
-<p>Total: <%= onlyItem.article.price %></p>
-<p>Item: <%= onlyItem.article.name %></p>
+<td class="id-col"><%= id %></td>
+<td class="customer-col"><%= owner.firstName %> <%= owner.lastName %></td>
