--- a/src/main/webapp/backoffice/backoffice.css
+++ b/src/main/webapp/backoffice/backoffice.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 ul{
-	padding:0 0 0 15px; 
+	padding: 0; 
 	list-style : none;
 }
 
@@ -26,4 +26,46 @@ a:hover { text-decoration:underline; }
 hr {
 	border:none;
 	border-top:1px dotted #000;
+}
+
+h2 {
+	margin: 0.5em 0;
+}
+
+h3 {
+	cursor: pointer;
+	margin: 0;
+	padding: 0.5em 0;
+}
+
+h3:HOVER {
+	background-color: #eee;
+}
+
+h3 em {
+	font-style: normal;
+	color: navy;
+}
+
+h3 .info {
+	font-weight: normal;
+	float: right;
+}
+
+span.switch {
+	color: gray;
+	font-family: monospace;
+	font-weight: bold;
+	font-size: 16pt;
+}
+
+table.order-group {
+	display: none;
+	margin-left: 1em;
+}
+
+.id-col {
+	width: 4em;
+	text-align: right;
+	padding-right: 1em;
 }
