--- a/src/main/webapp/backoffice/order/list/views/group.ejs
+++ b/src/main/webapp/backoffice/order/list/views/group.ejs
@@ -1,8 +1,9 @@
 <% var article = this.article %>
 <% var orders = this.items %>
+<% var closed = this.closed %>
 
-<h3><span class="switch">+</span> <em><%= article.name %></em> <span class="info"><%= orders.length %> order(s)</span></h3>
-<table class="order-group">
+<h3 id="<%= article.name %>"><span class="switch"><%= closed ? '+' : '-' %></span> <em><%= article.name %></em> <span class="info"><%= orders.length %> order(s)</span></h3>
+<table class="order-group" <% if ( !closed ) { %>style="display: table;"<% } %>>
 	<tr>
 		<th class="id-col">#</th>
 		<th class="customer-col">Customer</th>
