--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -1,29 +1,49 @@
 body {
-	font-family:Lucida Sans,Lucida Grande,Arial,sans-serif;
-	margin:0;
-	line-height:22px;
-	width:960px;
-	margin:0 auto;
-}
-h1 {
-	padding:30px 0 10px;
-	margin-top:0;
-	line-height:30px;
+	font-family: Lucida Sans, Lucida Grande, Arial, sans-serif;
+	margin: 0;
+	line-height: 22px;
+	width: 960px;
+	margin: 0 auto;
 }
 
-ul{
-	padding:0 0 0 15px; 
-	list-style : none;
+h1 {
+	padding: 30px 0 10px;
+	margin: 0;
+	line-height: 30px;
+}
+
+h2 {
+	margin: 0.5em 0;
+}
+
+h3 {
+	margin-top: 0;
+}
+
+h2 em,h3 em {
+	font-style: normal;
+	color: navy;
+}
+
+ul {
+	padding: 0 0 0 15px;
+	list-style: none;
 }
 
 a {
-	color:#ae3d26;
-	text-decoration:none;
+	color: #ae3d26;
+	text-decoration: none;
 }
 
-a:hover { text-decoration:underline; }
+a:hover {
+	text-decoration: underline;
+}
+
+.dim {
+	color: silver;
+}
 
 hr {
-	border:none;
-	border-top:1px dotted #000;
+	border: none;
+	border-top: 1px solid grey;
 }
