confirmation e-mail sending implemented, service layer refactored (mailing extracted to separate class)

--- a/src/main/resources/META-INF/velocity/menuMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.vm
@@ -1,1 +1,6 @@
 Your token is ${token}.
+
+The menu for today is:
+#foreach( ${meal} in ${menu} )
+	- ${meal.Name} for ${meal.Price} bucks (${shopURL}#meal=${meal.Id}&token=${token})
+#end
