--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -47,3 +47,9 @@ hr {
 	border: none;
 	border-top: 1px solid grey;
 }
+
+#changeCustomerButton {
+	display : inline;
+	color : blue;
+	font-size : 0.5em;
+}
