--- a/src/main/webapp/shop/order/new/views/page.ejs
+++ b/src/main/webapp/shop/order/new/views/page.ejs
@@ -1,13 +1,17 @@
 <% var meal = this.article %>
 <% var user = this.customer %>
+<% var deliveryLocation = this.deliveryLocation %>
+<% var deliveryLocations = this.deliveryLocations %>
 
 <h2><span class="dim">Welcome to Lunch4You</span>
 </h2>
 <hr/>
+Customer: 
 <div id="currentCustomerDetails">
 	<%= user.firstName %> <%= user.lastName %>
 	<div id="changeCustomerButton">Change</div>
 </div>
+<br>
 <form id="customerForm" style="display:none;">
 	Name: <input id="customerName" type="text"/>
 	<br/>
@@ -18,6 +22,23 @@
 	<input id="submitCustomerDetailsButton" type="button" value="Done"/>
 	<input id="cancelChangeCustomerButton" type="button" value="Cancel"/>
 </form>
+
+Delivery location: 
+<div id="deliveryLocationDetails">
+	<%= user.defaultDeliveryLocation.name %>
+	<div id="changeDeliveryLocationButton">Change</div>
+</div>
+<form id="deliveryLocationForm" style="display:none;">
+	<select id="deliveryLocationsSelect">
+	<% for ( var i = 0; i < deliveryLocations.length; i++ ) { %>
+		<%== $.View( '//shop/order/new/views/deliveryLocationOption.ejs', deliveryLocations[ i ] ) %>
+	<% } %>
+	</select>
+	<br/>
+	<input id="submitDeliveryLocationButton" type="button" value="Done"/>
+	<input id="cancelChangeDeliveryLocationButton" type="button" value="Cancel"/>
+</form>
+
 <h1><%= meal.category %> - <%= meal.name %></h1>
 <h3>Price: <em><%= meal.price %> CZK</em></h3>
 <p><%= meal.description_cz %> / <%= meal.description_en %></p>
