--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -48,7 +48,7 @@ hr {
 	border-top: 1px solid grey;
 }
 
-#changeCustomerButton {
+#changeCustomerButton, #changeDeliveryLocationButton {
 	display : inline;
 	color : blue;
 	font-size : 0.5em;
