--- a/src/main/resources/META-INF/velocity/menuMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.vm
@@ -2,5 +2,5 @@ Your token is ${token}.
 
 The menu for today is:
 #foreach( ${meal} in ${menu} )
-	- ${meal.Name} for ${meal.Price} bucks (${shopURL}#meal=${meal.Id}&token=${token})
+	- ${meal.Name_en} / ${meal.Name_cz} for ${meal.Price} bucks (${shopURL}#view=article&meal=${meal.Id}&token=${token})
 #end
