--- a/src/main/webapp/shop/order/new/views/page.ejs
+++ b/src/main/webapp/shop/order/new/views/page.ejs
@@ -1,45 +1,7 @@
-<% var meal = this.article %>
-<% var user = this.customer %>
-<% var deliveryLocation = this.deliveryLocation %>
-<% var deliveryLocations = this.deliveryLocations %>
-
-<h2><span class="dim">Lunch4You - <%= currentView() %></span></h2>
-<hr/>
-
-<div>
-	<label>Customer:</label>
-	<div id="currentCustomerDetails">
-		<span class="modifiable"><%= user.firstName %> <%= user.lastName %></span>
-		<div id="changeCustomerButton" class="link-button">Change</div>
-	</div>
-	
-	<div id="customerForm" class="in-place" style="display:none;">
-	</div>
+<div id="caption">
+	<h2><span class="dim">Lunch4You - <%= currentView() %></span></h2>
+	<hr/>
 </div>
 
-<div id="deliveryLocationDetails">
-	<label>Delivery location:</label> 
-	<select id="deliveryLocationsSelect">
-	<% for ( var i = 0; i < deliveryLocations.length; i++ ) { %>
-		<%== $.View( '//shop/order/new/views/deliveryLocationOption.ejs', deliveryLocations[ i ] ) %>
-	<% } %>
-	</select>
-	<!--span class="modifiable"><%= user.defaultDeliveryLocation.name %></span>
-	<div id="changeDeliveryLocationButton" class="link-button">Change</div-->
+<div id="detail">
 </div>
-
-<!--form id="deliveryLocationForm" class="in-place" style="display:none;">
-	<br/>
-	<input id="submitDeliveryLocationButton" type="button" value="Done"/>
-	<input id="cancelChangeDeliveryLocationButton" type="button" value="Cancel"/>
-</form-->
-
-<h1><%= meal.category.name_en %> / <%= meal.category.name_cz %> - <%= meal.name_en %> / <%= meal.name_cz %></h1>
-<h3>Price: <em><%= meal.price %> CZK</em></h3>
-<p><%= meal.description_en %> / <%= meal.description_cz %></p>
-
-<form>
-	<input id="order" type="button" value="confirm order" />
-</form>
-
-<a href="#view=menu&token=<%= Shop.params.token %>">View the whole menu</a>
