--- a/src/main/webapp/shop/menu/list/views/list.ejs
+++ b/src/main/webapp/shop/menu/list/views/list.ejs
@@ -1,3 +1,4 @@
+<a id="change-lang" href="javascript:"><%= msg( "order.detail.action.changeLanguage" ) %></a>
 <h2><span class="dim">Lunch4You - <%= currentView() %></span></h2>
 <hr/>
 
