--- a/src/main/webapp/shop/menu/list/views/category.ejs
+++ b/src/main/webapp/shop/menu/list/views/category.ejs
@@ -1,6 +1,6 @@
 <% var categoryGroup = this %>
 
-<h3><%= categoryGroup.category.name_en %> / <%= categoryGroup.category.name_cz %></h3>
+<h3><%= localize( categoryGroup.category, "name" ) %></h3>
 <ul>
 	<% for ( var i = 0; i < categoryGroup.items.length; i++ ) { %>
 	<li>
