--- a/src/main/webapp/shop/order/new/views/page.ejs
+++ b/src/main/webapp/shop/order/new/views/page.ejs
@@ -1,4 +1,5 @@
 <div id="caption">
+	<a id="change-lang" href="javascript:"><%= msg( "order.detail.action.changeLanguage" ) %></a>
 	<h2><span class="dim">Lunch4You - <%= currentView() %></span></h2>
 	<hr/>
 </div>
