--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -10,6 +10,8 @@ h1 {
 	padding: 30px 0 10px;
 	margin: 0;
 	line-height: 30px;
+	color: #c84;
+	text-align: center;
 }
 
 h2 {
@@ -18,6 +20,7 @@ h2 {
 
 h3 {
 	margin-top: 0;
+	text-align: center;
 }
 
 h2 em,h3 em {
@@ -35,12 +38,16 @@ form {
 }
 
 a {
-	color: #c40;
+	color: #080;
 	text-decoration: none;
 }
 
 a:hover {
 	text-decoration: underline;
+}
+
+p {
+	text-align: center;
 }
 
 .dim {
@@ -64,7 +71,7 @@ label {
 
 .link-button {
 	display: inline;
-	color: #c40;
+	color: #080;
 	font-size: 0.5em;
 	cursor: pointer;
 }
@@ -79,6 +86,11 @@ label {
 
 li.category {
 	margin-bottom: 1em;
+}
+
+#change-lang {
+	float: right;
+	cursor: pointer;
 }
 
 #customerForm {
@@ -105,4 +117,8 @@ li.category {
 
 #deliveryLocationDetails {
 	clear: both;
+}
+
+#confirm-order {
+	text-align: center;
 }
