--- a/src/main/webapp/shop/main/views/page.ejs
+++ b/src/main/webapp/shop/main/views/page.ejs
@@ -1,7 +1,7 @@
 <div id="caption">
 	<a id="change-lang" href="javascript:"><%= msg( "order.detail.action.changeLanguage" ) %></a>
-	<h2><span class="dim">Lunch4You - <%= currentView() %></span></h2>
-	<hr/>
+	<h2 id="logo">Lunch<em>4</em>You</h2>
+	<h2 id="screen-name"></h2>
 </div>
 
 <div id="detail">
