--- a/src/main/webapp/shop/menu/list/views/meal.ejs
+++ b/src/main/webapp/shop/menu/list/views/meal.ejs
@@ -1,3 +1,3 @@
 <% var meal = this %>
 
-<a href="#view=article&meal=<%= meal.id %>&token=<%= Shop.params.token %>"><%= localize( meal, "name" ) %></a>
+<a class="meal" href="#view=order&meal=<%= meal.id %>&token=<%= Shop.params.token %>"><%= localize( meal, "name" ) %></a>
