--- a/src/main/resources/META-INF/velocity/menuMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.vm
@@ -1,6 +1,17 @@
 Your token is ${token}.
 
 The menu for today is:
+#foreach( ${groupMap} in ${groupedMenu} )
+	#set( $category = $groupMap.get("category") )
+	Category: ${category}
+	#foreach( ${article} in ${groupMap.get("articles")} )
+		Article	- ${article}
+	#end
+
+#end
+
+
+The menu for today is:
 #foreach( ${meal} in ${menu} )
 	- ${meal.Name_en} / ${meal.Name_cz} for ${meal.Price} bucks (${shopURL}#view=article&meal=${meal.Id}&token=${token})
 #end
