--- a/src/main/webapp/backoffice/order/list1/views/articleWithOrders.ejs
+++ b/src/main/webapp/backoffice/order/list1/views/articleWithOrders.ejs
@@ -1,9 +1,10 @@
-<% var article = this.article %>
-<% var orders = this.orders %>
+<!% this is of class ArticleWithOrders %>
+<% var article = this.entity %>
+<% var orders = this.items %>
 
 <%= article.name_en %> - <%= orders.length %><br/>
 
 	<% for ( var i = 0; i < orders.length; i++ ) { %>
 		<% var order = orders[i] %>
-		&nbsp;&nbsp;<%= order.owner.firstName %> <%= order.owner.lastName %><br>
+		&nbsp;&nbsp;<%= order.owner.firstName %> <%= order.owner.lastName %> (<%= order.deliveryLocation.abbreviation %>)<br>
 	<% } %>
