--- a/src/main/webapp/backoffice/backoffice.css
+++ b/src/main/webapp/backoffice/backoffice.css
@@ -14,6 +14,7 @@ h1 {
 ul{
 	padding: 0; 
 	list-style : none;
+	margin: 0;
 }
 
 a {
@@ -36,6 +37,29 @@ h3 {
 	cursor: pointer;
 	margin: 0;
 	padding: 0.5em 0;
+}
+
+h4 {
+	margin: 0.5em 0;
+	color: gray;
+}
+
+h5 {
+	margin: 0;
+	padding: 0.25em;
+	background-color: #ccf;
+	color: #448;
+}
+
+table {
+	width: 100%;
+}
+
+td {
+	vertical-align: top;
+	border: 1px solid silver;
+	padding: 1em;
+	width: 50%;
 }
 
 h3:HOVER {
@@ -68,4 +92,8 @@ table.order-group {
 	width: 4em;
 	text-align: right;
 	padding-right: 1em;
+}
+
+#overlay {
+	display: none;
 }
