--- a/src/main/webapp/backoffice/order/list1/views/articleWithOrders.ejs
+++ b/src/main/webapp/backoffice/order/list1/views/articleWithOrders.ejs
@@ -2,7 +2,7 @@
 <% var article = this.entity %>
 <% var orders = this.items %>
 
-<%= article.name_en %> - <%= orders.length %><br/>
+<h5><%= article.name_en %> - <%= orders.length %></h5>
 
 	<% for ( var i = 0; i < orders.length; i++ ) { %>
 		<% var order = orders[i] %>
