order timestamp fix + styling

--- a/src/main/webapp/shop/main/views/page.ejs
+++ b/src/main/webapp/shop/main/views/page.ejs
@@ -1,5 +1,5 @@
 <div id="caption">
-	<a id="change-lang" href="javascript:"><%= msg( "order.detail.action.changeLanguage" ) %></a>
+	<a id="change-lang" href="javascript:"><span id="<%= Shop.Main.getOtherLocale() %>" class="flag"></span><%= msg( "order.detail.action.changeLanguage" ) %></a>
 	<h2 id="logo">Lunch<em>4</em>You</h2>
 	<h2 id="screen-name"></h2>
 </div>
