--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-	padding: 30px 0 10px;
+	padding: 10px 0 30px;
 	margin: 0;
 	line-height: 30px;
 	color: #c84;
@@ -26,6 +26,11 @@ h3 {
 h2 em,h3 em {
 	font-style: normal;
 	color: navy;
+}
+
+h4 {
+	margin-bottom: 0;
+	text-align: center;
 }
 
 ul {
@@ -89,6 +94,23 @@ li.category {
 	margin-bottom: 1em;
 }
 
+span.flag {
+	display: block;
+	width: 48px;
+	height: 24px;
+	margin: 0 auto 4px;
+	border: 1px solid black;
+	box-shadow: 0 0 8px 2px #ff8;
+}
+
+#cz {
+	background-image: url("../cz.png");
+}
+
+#en {
+	background-image: url("../en.png");
+}
+
 #caption {
 	padding: 1em;
 	background-color: #f80;
@@ -116,7 +138,8 @@ li.category {
 #change-lang {
 	float: right;
 	color: #ff8;
-	font-weight: bold;
+	font-size: 75%;
+	text-align: center;
 }
 
 #detail {
@@ -129,6 +152,8 @@ li.category {
 	padding: 0.5em;
 	width: 60%;
 	margin: auto;
+	border: 1px solid silver;
+	border-radius: 4px;
 }
 
 #customerForm {
@@ -157,6 +182,10 @@ li.category {
 
 #deliveryLocationDetails {
 	clear: both;
+}
+
+#description {
+	margin: 0 0 3em;
 }
 
 #confirm-order {
