--- a/src/main/webapp/backoffice/order/list2/views/list2.ejs
+++ b/src/main/webapp/backoffice/order/list2/views/list2.ejs
@@ -2,8 +2,11 @@
 <% if ( this.length == 0 ) { %>
 	<li>There are no active orders at the moment.</li>
 <% } %>
-<b>Table by locations</b>
+<table style="table-layout:fixed; width : 600px; border-width : 2px;" cellspacing="0" cellpadding="0">
 <% for ( var i = 0; i < this.length; i++ ) { %>
+	<tr>
 		<%== $.View( '//backoffice/order/list2/views/deliveryLocationWithArticles.ejs', this[ i ] ) %>
+	</tr>
 <% } %>
+</table>
 
