online menu re-worked

--- a/src/main/webapp/shop/menu/list/views/list.ejs
+++ b/src/main/webapp/shop/menu/list/views/list.ejs
@@ -1,7 +1,28 @@
-<ul>
+	<table id="menuTable">
+		<tr class="headerRow">
+			<td class="articleCell"></td>
+			<td class="priceCell"></td>	
+		</tr>
 	<% for ( var i = 0; i < this.length; i++ ) { %>
-	<li class="category">
-		<%== $.View( '//shop/menu/list/views/category.ejs', this[ i ] ) %>
-	</li>
+		<% var category =  this[i].entity; %>
+		<% var articles = this[i].items %>
+		<tr>
+			<td colspan="2" class="categoryCell">
+				<%= localize( category, "name" ) %>
+			</td>
+		</tr>
+		<% for ( var j = 0; j < articles.length; j++ ) { %>
+			<% var article = articles[j] %>
+			<tr>
+				<td class="articleCell">
+					<a class="meal" href="#view=order&meal=<%= article.id %>&token=<%= Shop.params.token %>"><%= localize( article, "name" ) %></a>
+					- <%= localize( article, "description" ) %>
+				</td>
+				<td class="priceCell">
+					<%= article.price %>,- CZK
+				</td>
+			</tr>
+		<% } %>
+		
 	<% } %>
-</ul>
+	</table>
